# QtExampleApp

./: .gitignore  CMakeLists.txt  LICENSE  QtExample.qmlproject  README.md  qmlmodules
content/: App.qml  Screen01.ui.qml
i18n/: QtExampleApp_de.ts  QtExampleApp_en.ts  QtExampleApp_es.ts  QtExampleApp_fr.ts  QtExampleApp_jp.ts
imports/: CMakeLists.txt
imports/QtExample/: CMakeLists.txt  qmldir
imports/QtExample/designer/: plugin.metainfo
src/: import_qml_plugins.h  main.cpp
